<?xml version="1.0" encoding="utf-8"?>
<resources>
    <plurals name="title_accounts">
        <item quantity="one">%d Account</item>
        <item quantity="other">%d Accounts</item>
    </plurals>
    <plurals name="info_deleted">
        <item quantity="one">%d item deleted.</item>
        <item quantity="other">%d items deleted.</item>
    </plurals>
    <!-- App strings -->
    <string name="app_name">PwdBook</string>
    <string name="app_about">%1$s\nVersion %2$s</string>
    <string name="app_copy">Copyright &#169; 299Studio 2014</string>
    <string name="app_welcome">Welcome to PwdBook</string>
    <string name="app_intro">Your central place to securely store your sensitive data and synchronize among devices.\n\nChoose where you want to sync your data</string>
    <!-- Action/Menu/Button/Label/Title strings -->
    <string name="edit_category">Edit Category</string>
    <string name="del_category">Delete Category</string>
    <string name="new_category">Add New Category</string>
    <string name="edit_account">Modify Account</string>
    <string name="del_account">Delete Account</string>
    <string name="new_account">New Account</string>
    <string name="help">Help and FAQ</string>
    <string name="settings">Settings</string>
    <string name="about">About PwdBook</string>
    <string name="all_accounts">All Accounts</string>
    <string name="categories">Categories</string>
    <string name="rate">Rate &amp; Feedback</string>
    <string name="set_icon">Choose an Icon</string>
    <string name="copy_pwd">Copy Password</string>
    <string name="change_pwd">Change Master Password</string>
    <string name="import_data">Import Data</string>
    <string name="export_data">Export Data</string>
    <string name="sync">Data Sync</string>
    <string name="general">General</string>
    <string name="security">Security</string>
    <string name="sync_none">Do Not Sync</string>
    <string name="sync_gpg">Google Play Games</string>
    <string name="sync_gdrive">Google Drive</string>
    <string name="sync_server">Sync Server</string>
    <string name="sync_msg">Show Sync Message</string>
    <string name="show_password">Always Show Passwords</string>
    <string name="show_ungrouped">Show \'Other\' Category</string>
    <string name="auto_lock">Lock on Entering Background</string>
    <string name="warn_copy">Warn on Copying Passwords</string>
    <string name="theme">App Theme</string>
    <string name="file_loc">File location:</string>
    <string name="export_type">Export file as:</string>
    <string name="import_type">Import file type:</string>
    <string name="licence">Open Source Licenses</string>
    <string name="enter_pwd">Enter Your Password</string>
    <string name="set_pwd">Set Your Master Password</string>
    <string name="repeat_pwd">Repeat the Password</string>
    <string name="current_pwd">Current Password</string>
    <string name="new_pwd">New Password</string>
    <string name="select_file">Select a file</string>
    <string name="def_category">Other</string>
    <string name="field_name">Field Label</string>
    <string name="field_value">Field Value</string>
    <string name="add_field">Add Another Field</string>
    <string name="undo">Undo</string>
    <string name="start">Start</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="unlock">Unlock</string>
    <string name="get_started">Get Started</string>
    <string name="select">TAP TO SELECT A FILE</string>
    <string name="option_label">Options to deal with duplicates:</string>
    <string name="option_ignore">Ignore</string>
    <string name="option_keepall">Keep Both</string>
    <string name="option_overwrite">Overwrite Existing</string>
    <string name="copy">Copy</string>
    <string name="auto_gen">Password Generator</string>
    <string name="other">Other</string>
    <string name="accept">Accept</string>
    <string name="refresh">Refresh</string>
    <string name="length">Length: %d</string>
    <!-- Tips/Messages -->
    <string name="delete_ask">Are you sure to delete it? You cannot undo this.</string>
    <string name="also_del_account">Also delete the accounts under the category.</string>
    <string name="no_file_explorer">File explorer not available.</string>
    <string name="no_accounts">You have not added anything.\n\nTap to add one.</string>
    <string name="contacting_gpg">Contacting Google Play Services…</string>
    <string name="loading">Loading data from Google Play Services…</string>
    <string name="pwd_changed">Password changed.</string>
    <string name="category_deleted">Category deleted.</string>
    <string name="pwd_wrong">Wrong password.</string>
    <string name="pwd_unmatch">You have given different passwords.</string>
    <string name="export_failed">Failed to export data.</string>
    <string name="import_failed">Failed to import data.</string>
    <string name="sync_failed">Failed to sync data.</string>
    <string name="text_copied">Text copied to clipboard.</string>
    <string name="export_success">Data exported to %s.</string>
    <string name="import_success">Data successfully imported.</string>
    <string name="sync_success_local">Data successfully retrieved from server.</string>
    <string name="sync_success_server">Data sent to server.</string>
    <string name="invalid_file">Please select a valid file to continue.</string>
    <string name="remember_choice">Remember my choice and do not ask again.</string>
    <string name="warning_copy">Text in clipboard can be accessed by any apps in your device. Are you sure to copy?</string>
    <string name="credits">Many thanks to <u>Xu, Xuechen</u> for French translations!</string>
    <string name="icon8_lisense">Some of the icons used in this app are from &lt;a href=\"http://icon8.com\"&gt;Icon8&lt;/a&gt; under license &lt;a href=\"http://creativecommons.org/licenses/by-nd/3.0/\"&gt;Creative Commons Attribution-NoDerivs 3.0 Unported&lt;/a&gt;.</string>
    <string name="auth_required">The source file is encrypted with a different password, please input the password to unlock it.</string>
    <!-- String arrays -->
    <string-array name="theme_names">
        <item>Default Light Theme</item>
        <item>Default Dark Theme</item>
        <item>Indigo Light</item>
        <item>Indigo Dark</item>
        <item>Purple Light</item>
        <item>Purple Dark</item>
        <item>Blue-Grey Light</item>
        <item>Blue-Grey Dark</item>
        <item>Teal Light</item>
        <item>Teal Dark</item>
    </string-array>
    <string-array name="category_names">
        <item>Bank Accounts</item>
        <item>Credit Cards</item>
        <item>Devices</item>
        <item>E-Banking</item>
        <item>Email Accounts</item>
        <item>Web Accounts</item>
    </string-array>
    <string-array name="field_types">
        <item>Text</item>
        <item>Password</item>
        <item>Web Link</item>
        <item>Email</item>
        <item>PIN</item>
    </string-array>
    <string-array name="file_types">
        <item>PwdBook data file (encrypted)</item>
        <item>PwdBook CSV file (plain text)</item>
    </string-array>
    <string-array name="file_types_import">
        <item>PwdBook data file (encrypted)</item>
        <item>PwdBook CSV file (plain text)</item>
        <item>aWallet CSV File (plain text)</item>
    </string-array>
    <string-array name="def_field_names">
        <item>Username</item>
        <item>Password</item>
        <item>Email</item>
        <item>Web address</item>
        <item>Card No.</item>
        <item>PIN</item>
        <item>Note</item>
        <item>Bank Name</item>
        <item>CVC</item>
    </string-array>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="title_tour0">Keep Securely</string>
    <string name="title_tour1">Access Anywhere</string>
    <string name="title_tour2">Password Generation</string>
    <string name="desc_tour0">Data in PwdBook are encrypted and kept safe so you will not lose them</string>
    <string name="desc_tour1">Data can be saved in your Google Drive so you can access on any Android devices.</string>
    <string name="desc_tour2">Strong passwords are no longer a difficult thing for you to manage.</string>
    <string name="category_saved">Category saved.</string>
</resources>
