<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView android:id="@+id/app"
    android:gravity="center"
    android:alpha="0.0"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="120dp"
    android:drawablePadding="16dp"
    android:text="@string/app_name"
    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
    android:drawableTop="@drawable/ic_launcher"
    />
<android.support.v4.view.ViewPager 
    android:id="@+id/pager"
    android:alpha="0.0"
    android:background="@drawable/welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true"
    android:background="@drawable/btm_nav_bar">

   <Button android:id="@+id/skip"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:layout_weight="1"
       android:text="@string/skip"
       android:onClick="onButtonClick"
       style="@style/atButtonStyle"/>
   <LinearLayout android:id="@+id/container" 
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:alpha="0.0"
       android:layout_weight="1"
       android:gravity="center"
       android:orientation="horizontal">
   <ImageView android:id="@+id/indicator_0"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:contentDescription="@null"
       android:src="@drawable/dot_fill"/>
   <ImageView android:id="@+id/indicator_1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="8dp"
       android:contentDescription="@null"
       android:src="@drawable/dot"/>
   <ImageView android:id="@+id/indicator_2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="8dp"
       android:contentDescription="@null"
       android:src="@drawable/dot"/>
   </LinearLayout>
   
   <Button android:id="@+id/next"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:layout_weight="1"
       android:text="@string/next"
       android:onClick="onButtonClick"
       style="@style/atButtonStyle"/>

</LinearLayout>

</RelativeLayout>
